Fixed miss with seconds only not showing 2 characters

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -39,7 +39,7 @@ width: 100%;
 }
 .position{
   margin:auto;
-  min-width: 50px;
+  min-width: 30px;
   font-size: 150%;
   text-align: center;
   }
